<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:id="@+id/popup_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4c000000" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_memo"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_below="@id/llTop"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/txt_hour" />

                <TextView
                    android:id="@+id/tvMinute"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/txt_minute" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4C257F" />
        </LinearLayout>
        
        <Button
            android:id="@+id/btAlarmAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_alarm"
            android:layout_marginTop="10dp"
            android:background="#9449F2"
            android:textColor="#fff"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    </ScrollView>
    

    

</RelativeLayout>