<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#EAEAEA" >

<Button
    android:id="@+id/btSearchDate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#6799FF"
    android:text="@string/txt_search_date"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#EAEAEA" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/btSearchDate"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tvConvertDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#6799FF" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llEditArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etMemo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txt_memo"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/ivAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/btn_alarm_on"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btAddFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="#6799FF"
                    android:text="@string/txt_add_date"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#EAEAEA"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btAddAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#6799FF"
                    android:text="@string/txt_add_alarm"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#EAEAEA" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

<ys.bup.lunarcalendar.activities.AlarmAddOverlay
    android:id="@+id/overlayAlarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone" />

</RelativeLayout>